Revert "Tech19 1440: allow left overflow (fix clipped content)"
This reverts commit 0a5f1304bb940f9dd0e61134a9cfe7bc076a27e8.

--- a/static/css_v2/pages/home.css
+++ b/static/css_v2/pages/home.css
@@ -5660,7 +5660,7 @@
     width: 655px !important;
     height: 505px !important;
     max-width: none !important;
-    overflow: visible !important;
+    overflow: hidden;
     box-sizing: border-box;
   }
 
